# wynncraft-data

./: README.md  guild.py  item-detection.py  keepalive.txt  main.py  player.py  pyproject.toml  requirements.txt  sync_items.py  update-lb-name.py  update-users-minecraft-name.py  update_last_seen.py
.github/workflows/: Run crawl task.yml  initialize.yml  item-changelog.yml  keepalive.yml  player.yml  run_guild_tasks.yml  sync_aspects.yml  sync_items.yml  update_last_seen.yml  update_leaderboard_names.yml  update_names.yml
datafiles/: guilds.json  playerdata.json
guilds/:   Immortals.json   BanditsWorldTour.json   Blank .json   CN Berserker.json   Emerald Dust.json   FazeClan.json   GodFire.json   Holzkop.json   Mercurial.json   PDI.json  A Derp Wood.json  A Dodger Wynn.json  A Few Random Idiots.json  A Guild.json  A Resting Place.json  A Wynnic Operation.json  A gross of Insanity.json  A gyasz meg a szenvedes.json  A specific guild to join.json  AAAAAAAA.json  AARGH.json  AArena.json  ABCD Clan.json  ABOVE.json  ABUSEDDOGS.json  ABadIdea.json  AC Frio.json  ACGT.json  ACM.json  ACatsuki.json  AGuild.json  ALBANIANFARMERS.json  ALL YOUR BASE.json  AM Cuplu.json  AMENO.json  ANACHONDA.json  ANTIGUILD.json  AR Rise.json  ARC OF SHADOWS.json  ARG Guild.json  (+8196 more)
tasks/aspects/: sync_aspects.py
